--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+.app {
+  height: 100vh;
+  background: #f0da13;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.person {
+  width: 570px;
+  height: 400px;
+  left: 135px;
+  top: 288px;
+  background: white;
+  border-radius: 8px;
+
+  justify-content: space-around;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+  width: 560px;
+  height: 280px;
+  left: 18px;
+  top: 86px;
+  background: white;
+  border-radius: 8px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.divider {
+  width: 5px;
+  height: 5px;
+  display: inline-block;
 }
 
-.App-link {
-  color: #61dafb;
+.dividers {
+  width: 15px;
+  height: 15px;
+  display: inline-block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dividerss {
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+}
+
+.dividersss {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+}
+
+.warningbutton {
+  background-color: "#success";
+  fill: "#warning";
+}
+
+.greenbutton {
+  background-color: "#success";
+  color: "#green";
 }
